# agentlock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agentlock/: __init__.py  audit.py  chain.py  cli.py  context.py  decorators.py  defer.py  exceptions.py  gate.py  hardening.py  memory_gate.py  modify.py  policy.py  rate_limit.py  receipts.py  redaction.py  schema.py  session.py  stepup.py  token.py  types.py
agentlock/auth_providers/: __init__.py
agentlock/integrations/: __init__.py  autogen.py  crewai.py  fastapi.py  flask.py  langchain.py  mcp.py
agentlock/signals/: __init__.py  combos.py  echo.py  prompt_scan.py  velocity.py
docs/: benchmark.md  integrations.md  quickstart.md  specification.md
examples/: data_redaction.py  decorator_example.py  fastapi_app.py  multi_role.py  quickstart.py  rate_limiting.py
schema/: agentlock-v1.0.json  agentlock-v1.2.json
tests/: conftest.py  test_audit.py  test_audit_v11.py  test_backward_compat.py  test_benchmark_gaps.py  test_benchmark_gaps_v2.py  test_chain.py  test_cli.py  test_combos.py  test_compound.py  test_context.py  test_decorators.py  test_defer.py  test_echo.py  test_filter_pipeline.py  test_gate.py  test_gate_v11.py  test_gate_v12.py  test_hardening.py  test_memory_gate.py  test_modify.py  test_pii_defense.py  test_policy.py  test_policy_v11.py  test_prompt_scan.py  test_rate_limit.py  test_receipts.py  test_redaction.py  test_schema.py  test_schema_v11.py  test_session.py  test_stepup.py  test_token.py  test_velocity.py
