[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlock"
version = "1.2.0"
description = "Authorization framework for AI agent tool calls. Your AI agent needs a login screen — AgentLock is that login screen."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "David Grice", email = "webpro255@users.noreply.github.com" },
]
keywords = [
    "ai",
    "agent",
    "authorization",
    "security",
    "llm",
    "tool-calling",
    "permissions",
    "access-control",
    "rbac",
    "ai-safety",
    "red-team",
    "owasp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.30"]
autogen = ["pyautogen>=0.2"]
mcp = ["mcp>=1.0"]
fastapi = ["fastapi>=0.100", "python-jose[cryptography]>=3.3"]
flask = ["flask>=2.0"]
all = [
    "langchain-core>=0.2",
    "crewai>=0.30",
    "pyautogen>=0.2",
    "mcp>=1.0",
    "fastapi>=0.100",
    "python-jose[cryptography]>=3.3",
    "flask>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
agentlock = "agentlock.cli:main"

[project.urls]
Homepage = "https://agentlock.dev"
Documentation = "https://agentlock.dev/docs"
Repository = "https://github.com/webpro255/agentlock"
Issues = "https://github.com/webpro255/agentlock/issues"
Changelog = "https://github.com/webpro255/agentlock/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agentlock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["SIM108", "SIM114"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["B008"]

[tool.coverage.run]
source = ["agentlock"]
omit = ["agentlock/integrations/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
